# audiobookgen

./: .checkpoint  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  next.config.mjs  package-lock.json  package.json  papercuts.md
.agent/traces/: desktop-check.json  frontend-build.json  frontend-tests.json  m7-first-sound-m8-harness.md  managed-voxtral-cargo-clippy.json  managed-voxtral-cargo-test.json  managed-voxtral-npm-build.json  managed-voxtral-npm-test.json  maya1-cuda-install.json  merge-consolidation.md  mock-e2e.json  multi-engine-tts-word-highlight.md  playback-audio-highlighting.md  playback-highlight-pre-edit.md  product-hardening-plan.md  repo-validation.json  rust-clippy.json  rust-fmt.json  rust-tests.json  voxtral-int4-12gb.md  voxtral-int4-runtime-install.md  voxtral-model-download.md  voxtral-rtx3060-gpu-tests.md  voxtral-speed-m1-m2.md  voxtral-speed-m3-b2.md  voxtral-speed-m3-b3a.md  voxtral-speed-m4-scheduler.md  voxtral-worker-e2e.md  worker-tests.json
.bootstrap/: chunk-000.txt  chunk-001.txt  chunk-002.txt  chunk-003.txt  chunk-004.txt  chunk-005.txt  chunk-006.txt  chunk-007.txt  chunk-008.txt  chunk-009.txt  chunk-010.txt  hashes.txt  part-000.b64  part-001-0.b64  part-001-1.b64  part-001-2.b64  part-001.b64  part-002.b64  part-003-1.b64  part-003-2.b64  part-003.b64  part-004.b64  trigger.txt
.github/workflows/: bootstrap-source.yml  ci.yml  materialize-source.yml  release.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  platform.rs  voxtral.rs
crates/audiobookgen-core/: Cargo.toml
crates/audiobookgen-core/src/: cache.rs  db.rs  epub.rs  export.rs  lib.rs  model.rs  narration.rs  normalize.rs  sync.rs  worker.rs
crates/audiobookgen-core/tests/: cache_profiles.rs  epub_pipeline.rs
docs/: ARCHITECTURE.md  Log.md  PLATFORMS.md  RESEARCH.md  SYNC.md  TESTING.md  VOXTRAL.md
docs/plans/: product-hardening.md  voxtral-streaming-optimization.md
reports/benchmarks/: SPEEDLOG.md  voxtral-b2-batched-cfg-2026-07-16.json  voxtral-b2-batched-cfg-2026-07-16.md  voxtral-b3a-eager-prefill-2026-07-16.json  voxtral-b3a-eager-prefill-2026-07-16.md  voxtral-b3a2-fixed-freqs-2026-07-16.json  voxtral-b3a2-fixed-freqs-2026-07-16.md  voxtral-baseline-suite-2026-07-16.json  voxtral-baseline-suite-2026-07-16.md  voxtral-rtx3060-2026-07-16.json  voxtral-rtx3060-2026-07-16.md
scripts/: check_audio_levels.py  e2e_mock_worker.py  e2e_real_worker.py  e2e_voxtral_worker.py  next.mjs  validate_repo.py
services/tts-worker/: pyproject.toml
services/tts-worker/audiobookgen_worker/: engine.py  main.py  protocol.py
services/tts-worker/audiobookgen_worker/engines/: __init__.py  base.py  kokoro.py  maya1.py  voxtral.py
services/tts-worker/audiobookgen_worker/voxtral_int4/: __init__.py  audio.py  errors.py  inference.py  load_model.py  model.py  runtime.py  tekken.py
services/tts-worker/scripts/: benchmark_voxtral.py
services/tts-worker/tests/: test_progress.py  test_protocol.py  test_voxtral_int4.py  test_worker.py
services/tts-worker/tests/gpu/: test_voxtral_gpu.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AppShell.tsx  ImportReviewPanel.tsx  LibraryView.tsx  ModelsView.tsx  ReaderStudio.tsx
src/lib/: import-selection.test.ts  import-selection.ts  reader.test.ts  reader.ts  store.ts  tauri.test.ts  tauri.ts  types.ts  voices.test.ts  voices.ts
