[workspace]
members = ["crates/audiobookgen-core", "apps/desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hound = "3.5"
regex = "1.11"
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.19"
thiserror = "2.0"
tokio = { version = "1.45", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
zip = { version = "2.6", default-features = false, features = ["deflate"] }
