[package]
name = "audiobookgen-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
hound.workspace = true
regex.workspace = true
roxmltree.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
