[project]
name = "audiobookgen-worker"
version = "0.1.0"
description = "Persistent multi-engine TTS worker for AudiobookGen (Kokoro, Maya1, Voxtral)"
requires-python = ">=3.10,<3.14"
dependencies = [
  "kokoro>=0.9.4,<1",
  "soundfile>=0.12,<1",
  "huggingface-hub>=0.28,<1",
  "numpy>=1.26,<3",
  # spacy (via kokoro -> misaki) imports click directly, but modern typer no
  # longer pulls it in transitively, so pin it explicitly.
  "click>=8,<9",
  # misaki loads spacy's English model at generation time and would otherwise
  # try to download it mid-narration; ship it as a normal pinned dependency.
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
]

[project.optional-dependencies]
dev = []
# Maya1 voice-design TTS: quantized GGUF via llama.cpp plus the SNAC decoder.
maya1 = [
  "llama-cpp-python>=0.3.2",
  "snac>=1.2.1",
  "torch>=2.2",
]
# Voxtral is served by an external vLLM-Omni process; the worker only needs
# the base install to talk to it.
voxtral = []

[project.scripts]
audiobookgen-worker = "audiobookgen_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# The spaCy English model is only distributed as a release wheel URL.
allow-direct-references = true
