[package]
name = "audiobookgen-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "audiobookgen_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "AudiobookGen"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
audiobookgen-core = { path = "../../../crates/audiobookgen-core" }
anyhow.workspace = true
chrono.workspace = true
hound.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tauri = { version = "2.10", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2.4"

[dev-dependencies]
tauri = { version = "2.10", features = ["test"] }
tempfile.workspace = true
zip.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
